// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Inline Newsletter Puff Manage preferences  renders the success view after subscribing  1`] = `
<body>
  <div>
    <div
      class="sc-bdVaJa sc-EHOje hyukSd"
    >
      <div
        class="sc-bdVaJa sc-bZQynM WUEmI"
      >
        <div
          class="sc-bwzfXH sc-dnqmqq bLBWjH"
        >
          You've succesfully signed up to
           
          <div
            class="sc-bwzfXH sc-htoDjs kzNeHZ"
          >
            Politics. Explained.
            . 
          </div>
          <a
            class="link__RespLink-sc-1ocvixa-0 dfMuic"
            href="https://home.thetimes.co.uk/myNews"
          >
            <div
              class="sc-bwzfXH sc-gqjmRU lkkVzv"
            >
              Manage preferences here
            </div>
          </a>
        </div>
        <div
          class="sc-bdVaJa sc-gZMcBi iZxCaH"
        />
      </div>
    </div>
  </div>
</body>
`;

exports[`Inline Newsletter Puff renders null when is already subscribed 1`] = `
<body>
  <div />
</body>
`;

exports[`Inline Newsletter Puff renders placeholder when loading 1`] = `
<body>
  <div>
    <div
      class="sc-bdVaJa sc-EHOje frVZJs"
      style="height: 257px;"
    >
      <div
        class="tc-view__TcView-nuazoi-0 fPjBcr"
        height="100%"
        style="align-items: center; background-color: rgb(237, 237, 237); bottom: 0px; justify-content: center; left: 0px; position: absolute; right: 0px; top: 0px; z-index: 0; border-radius: 0;"
        width="100%"
      >
        <svg
          height="auto"
          style="max-width: 25%; max-height: 50%;"
          version="1.1"
          viewBox="145 50 108 120"
          width="100%"
        >
          <g
            fill="none"
            fill-rule="evenodd"
            stroke="none"
            stroke-width="1"
          >
            <path
              d="M211.26076,54 L211.231367,54 L147.67512,54 L145,85.7081465 L146.922096,86.4489102 C146.922096,86.4489102 164.867589,68.1355181 168.301115,65.0001546 C171.728017,61.8689133 174.237132,61.0885763 176.436179,60.3527593 C180.998206,59.169681 185.977937,59.2150255 185.977937,59.2150255 L186.109581,59.2150255 L186.109581,156.560932 L169.259886,164.473953 L169.259886,166 L228.735147,166 L228.735147,164.473953 L211.889177,156.560932 L211.889177,59.2150255 L212.01751,59.2150255 C212.01751,59.2150255 216.992272,59.169681 221.558854,60.3527593 C223.757072,61.0885763 226.266601,61.8689133 229.691848,65.0001546 C233.130341,68.1355181 251.071695,86.4489102 251.071695,86.4489102 L253,85.7081465 L250.317842,54 L211.270695,54 L211.242545,54"
              fill="#FFFFFF"
            />
          </g>
        </svg>
      </div>
    </div>
  </div>
</body>
`;

exports[`Inline Newsletter Puff renders signup state 1`] = `
<body>
  <div>
    <div
      class="sc-bdVaJa sc-EHOje hyukSd"
    >
      <div
        class="sc-bdVaJa sc-gzVnrw fvtpyU"
      >
        <div
          class="sc-bwzfXH sc-dnqmqq bLBWjH"
        >
          <div
            class="sc-bwzfXH sc-htoDjs kzNeHZ"
          >
            Politics. Explained.
            : 
          </div>
          Sign up to receive our brilliant Red Box newsletter, Matt Chorley\`s poke at politics delivered every weekday morning at 8am.
          <button
            class="sc-fjdhpX dwNMSq"
          >
            One click sign up
          </button>
        </div>
        <div
          class="sc-bdVaJa sc-iwsKbI hKKkan"
        >
          <button
            style="font-family: GillSansMTStd-Medium; font-size: 16px; line-height: 0; align-items: center; background-color: transparent; border-radius: 2px; color: rgb(29, 29, 27); cursor: pointer; height: 48px; justify-content: center; min-width: 100px; padding-top: 4px; width: 100%; border-color: #1d1d1b; border-width: 1px; elevation: 0; letter-spacing: 0.2px;"
            type="button"
          >
            One click sign up
          </button>
        </div>
      </div>
    </div>
  </div>
</body>
`;

exports[`Inline Newsletter Puff renders signup view when not already subscribed 1`] = `
<body>
  <div>
    <div
      class="sc-bdVaJa sc-EHOje hyukSd"
    >
      <div
        class="sc-bdVaJa sc-gzVnrw fvtpyU"
      >
        <div
          class="sc-bwzfXH sc-dnqmqq bLBWjH"
        >
          <div
            class="sc-bwzfXH sc-htoDjs kzNeHZ"
          >
            Politics. Explained.
            : 
          </div>
          Sign up to receive our brilliant Red Box newsletter, Matt Chorley\`s poke at politics delivered every weekday morning at 8am.
          <button
            class="sc-fjdhpX dwNMSq"
          >
            One click sign up
          </button>
        </div>
        <div
          class="sc-bdVaJa sc-iwsKbI hKKkan"
        >
          <button
            style="font-family: GillSansMTStd-Medium; font-size: 16px; line-height: 0; align-items: center; background-color: transparent; border-radius: 2px; color: rgb(29, 29, 27); cursor: pointer; height: 48px; justify-content: center; min-width: 100px; padding-top: 4px; width: 100%; border-color: #1d1d1b; border-width: 1px; elevation: 0; letter-spacing: 0.2px;"
            type="button"
          >
            One click sign up
          </button>
        </div>
      </div>
    </div>
  </div>
</body>
`;
